<resources>
    <string name="app_name">Moga</string>
    <string name="launcher_name">أكاديمية موجه</string>
    <string name="action_settings">الإعدادات</string>
    <string name="login_text">تسجيل الدخول</string>
    <string name="sign_up_text">إنشاء حساب</string>
    <string name="title_activity_login">تسجيل الدخول</string>
    <string name="title_activity_sign_up">إنشاء حساب</string>
    <string name="credentials">البريد الإلكترونى / الموبايل</string>
    <string name="password_text">كلمة المرور</string>
    <string name="name_text">الإسم</string>
    <string name="mail_text">البريد الإلكترونى</string>
    <string name="mobile_text">الموبايل</string>
    <string name="password_confirmation_text">تأكيد كلمة المرور</string>
    <string name="title_activity_main">أخر الأخبار</string>

    <string name="navigation_drawer_open">إفتح القائمة</string>
    <string name="navigation_drawer_close">أغلق القائمة</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_schedule">الجدول</string>
    <string name="first_year">الفرقة الأولى</string>
    <string name="second_year">الفرقة الثانية</string>
    <string name="third_year">الفرقة الثالثة</string>
    <string name="fourth_year">الفرقة الرابعة</string>
    <string name="open_learning">التعليم المفتوح</string>
    <string name="high_studies">الدراسات العليا</string>
    <string name="settings">الإعدادات</string>
    <string name="about_us">من نحن</string>
    <string name="contact_us">إتصل بنا</string>
    <string name="error_msg">حدث خطأ, برجاء المحاولة مرة أخرى</string>

    <string name="contact_us_address">100 أ ش منصور - بجوار سوبر ماركت راية - مول حلوان - الدور الثانى</string>
    <string name="contact_us_tel">01120446175 - 01155175577 \n01275134512 - 01284130205</string>
    <string name="contact_us_welcome">يسعدنا تلقي مكالماتكم علي الارقام التالية لأي استفسارات</string>
    <string name="title_activity_schedule_list">الجداول</string>

</resources>
