<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="com.android.gifts.moga.views.activities.LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/credentials"
            android:layout_weight="0.1"
            android:layout_marginRight="32dp"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageView3"
            android:src="@drawable/ic_contact_mail_black_24dp"
            android:alpha=".53"
            android:layout_gravity="center_vertical|right" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:layout_weight="0.1"
            android:layout_marginRight="32dp"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:src="@drawable/ic_fingerprint_black_24dp"
            android:alpha=".53"
            android:layout_gravity="center_vertical|right" />
    </LinearLayout>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:id="@+id/login_btn"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="هل نسيت كلمة المرور ؟"
        android:id="@+id/forgot_pass_text"
        android:textSize="12sp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="4dp" />

</RelativeLayout>
