<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.gifts.moga.views.activities.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_weight="0.1"
                    android:hint="@string/name_text"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:alpha=".53"
                    android:src="@drawable/ic_face_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_weight="0.1"
                    android:hint="@string/mail_text"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:alpha=".53"
                    android:src="@drawable/ic_contact_mail_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout2"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/user_mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_weight="0.1"
                    android:hint="@string/mobile_text"
                    android:inputType="phone"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:alpha=".53"
                    android:src="@drawable/ic_smartphone_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout3"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_weight="0.1"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/icon4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:alpha=".53"
                    android:src="@drawable/ic_fingerprint_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout4"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/user_password_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="55dp"
                    android:layout_weight="0.1"
                    android:hint="@string/password_confirmation_text"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/spinners_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout5"
                android:layout_gravity="right"
                android:layout_marginTop="12dp"
                android:gravity="right"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/year_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/sign_up_btn"
                    android:layout_alignRight="@+id/sign_up_btn"
                    android:layout_below="@+id/linearLayout5"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:textDirection="rtl" />

                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/year_spinner"
                    android:layout_gravity="right"
                    android:layout_toLeftOf="@+id/sign_up_btn"
                    android:layout_toStartOf="@+id/sign_up_btn"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:spinnerMode="dropdown"
                    android:textDirection="rtl" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sign_up_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/spinners_layout"
                android:layout_gravity="right"
                android:layout_marginRight="52dp"
                android:layout_marginTop="12dp"
                android:text="@string/sign_up_text"
                android:textAppearance="@style/AppTheme.Widget.Button" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
